client/src/App.css
@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
@import "tailwindcss";

:root {
  font-family: "Inter", sans-serif
}

.si-tab {
  font-weight: 600;
  border: none;
  background-color: transparent;
}

.si-tab:hover {
  cursor: pointer;
}

.si-tab-active {
  border-bottom: 2px solid;
}

.no-scrollbar::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge, and Firefox */
.no-scrollbar {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;     /* Firefox */
}

@theme {
  --breakpoint-hd: 780px;
  --breakpoint-xs: 375px;
  --font-inter: "Inter", sans-serif;
}

